--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/shortcut-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LensPark</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4650280_49ptxa2t78i.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4650280_2zhayjyoqgu.css">
     <style>
         * {
             margin: 0;
