--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/shortcut-icon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title>LensPark</title>
-    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4650280_2zhayjyoqgu.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4650280_ijitvosmg1s.css">
     <style>
         * {
             margin: 0;
